--- a/Grocery List/View/Base.lproj/Main.storyboard
+++ b/Grocery List/View/Base.lproj/Main.storyboard
@@ -170,7 +170,7 @@
                                                                     <backgroundConfiguration key="background" image="facebook" imageContentMode="scaleAspectFit"/>
                                                                 </buttonConfiguration>
                                                                 <connections>
-                                                                    <action selector="facebookLoginButton:" destination="szR-TC-gSS" eventType="touchUpInside" id="lJc-ex-zKa"/>
+                                                                    <action selector="facebookLoginButton:" destination="szR-TC-gSS" eventType="touchUpInside" id="81s-A1-mUK"/>
                                                                 </connections>
                                                             </button>
                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UvR-gu-1J2">
@@ -251,7 +251,6 @@
                     <nil key="simulatedTopBarMetrics"/>
                     <connections>
                         <outlet property="ErrorLabel" destination="UgO-5N-Hwu" id="EfT-hO-CbJ"/>
-                        <outlet property="GoogleButton" destination="UvR-gu-1J2" id="Mag-Or-chp"/>
                         <outlet property="emailTextField" destination="HZj-Bh-pNE" id="561-hL-ZrO"/>
                         <outlet property="passwordTextField" destination="45z-uX-5iw" id="XA2-5j-kYc"/>
                     </connections>
